# PhantomMesh-VPN

./: .gitignore  ALL_5_ACTIONS_COMPLETE_SUMMARY.md  COMPLETE_EXECUTION_STATUS.md  COMPONENTS_5_6_INTEGRATION_SUMMARY.md  COMPREHENSIVE_PROJECT_STATUS.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  DOCUMENT_READING_PRIORITY_MAP.md  EXECUTION_ENGINE.md  FINAL_PRODUCTION_SUMMARY.md  FINAL_SECURITY_AUDIT_REPORT.md  FIRST_LOAD_TEST_READY.md  GO_LIVE_EXECUTION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  K8s_MANIFESTS_COMPLETION_REPORT.md  LOAD_TEST_EXECUTION_READY.md  LOAD_TEST_EXECUTION_REPORT.md  MASTER_EXECUTION_COORDINATOR.md  MISSION_ACTIVE.md  NEXT_STEPS_ACTION_PLAN.md  OPTIMIZATION_SUMMARY.md  P99_TAIL_LATENCY_OPTIMIZATION.md  PHANTOM_MESH_DEVELOPMENT_PROGRESS.md  PHASE4_AUTONOMOUS_TRACKER.md  PHASE4_DASHBOARD.md  PHASE4_EXECUTION_LOG_LIVE.md  PHASE4_EXECUTION_LOG_LIVE_FINAL.md  PHASE4_EXECUTION_PACKAGE_SUMMARY.md  PHASE4_EXECUTION_REPORT_20260104_121335.md  PHASE4_EXECUTION_RUNBOOK.md  PHASE4_EXECUTIVE_BRIEFING.md  PHASE4_Execute_Deployment.ps1  PHASE4_IMMEDIATE_ACTION.md  PHASE4_LIVE_EXECUTION_LOG.md  PHASE4_LIVE_STATUS.md  PHASE4_QUICK_REFERENCE.md  PHASE4_Staging_LoadTest.ps1  PHASE_P1_002_EXECUTIVE_SUMMARY.md  PHASE_P1_003_COMPLETION_REPORT.md  PHASE_P1_003_STATUS.md  (+28 more)
phantom-mesh-vpn/: .gitignore  Cargo.toml  Dockerfile.agents  Dockerfile.discovery  Dockerfile.node  LICENSE  README.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini
phantom-mesh-vpn/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
phantom-mesh-vpn/.github/workflows/: ci.yml  release.yml  security-scan.yml
phantom-mesh-vpn/benches/: agent_benchmarks.rs
phantom-mesh-vpn/configs/: alert_rules.yml  dynamic_agents.yml  logging.yml  mesh_configs.yaml  node_profiles.yaml  prometheus.yml  promtail.yml  service_token
phantom-mesh-vpn/configs/grafana/: dashboard.yml  datasources.yml
phantom-mesh-vpn/configs/grafana/dashboards/: phantommesh-dashboard.json
phantom-mesh-vpn/configs/production/: app-config.ini
phantom-mesh-vpn/desktop-client/: Cargo.toml  README.md  build.ps1  tauri.conf.json
phantom-mesh-vpn/desktop-client/icons/: README.md  icon.icns
phantom-mesh-vpn/desktop-client/src/: commands.rs  error.rs  main.rs  state.rs  tray.rs  vpn.rs
phantom-mesh-vpn/desktop-client/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
phantom-mesh-vpn/desktop-client/ui/src/: App.tsx  index.css
phantom-mesh-vpn/docs/: DEPENDENCY_ANALYSIS.md  DEPENDENCY_SUPPLY_CHAIN_POLICY.md  DEPENDENCY_UPDATES.md  DEPENDENCY_UPDATE_IMPLEMENTATION_GUIDE.md  DEPENDENCY_UPDATE_STATUS.md  DEPLOYMENT_AND_TESTING_COMPLETE.md  DEPLOYMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  LOAD_TEST_REPORT.md  MASTER_ACTION_PLAN.md  P0-001_EXECUTION_REPORT.md  P0-002_EXECUTION_REPORT.md  P0-003_EXECUTION_REPORT.md  P0-004_EXECUTION_REPORT.md  P1-001_EXECUTION_REPORT.md  PHASE_P1_002_ORCHESTRATION.md  PHASE_P1_003_ADVANCED_INTELLIGENCE.md  PORT_ALLOCATION_SCHEME.md  architecture.md  ip_protections.md  sigma_vault_proofs.md
phantom-mesh-vpn/docs/api_docs/: .gitkeep
phantom-mesh-vpn/k8s/: README.md
phantom-mesh-vpn/k8s/base/autoscaling/: hpa.yaml
phantom-mesh-vpn/k8s/base/rbac/: rbac.yaml
phantom-mesh-vpn/k8s/istio/: istio-config.yaml
phantom-mesh-vpn/k8s/linkerd/: linkerd-config.yaml
phantom-mesh-vpn/scripts/: deploy.ps1  p0-001-test-scaffold.sh  phase4_execute.ps1  phase4_execute.sh  production_deploy_full_auto.ps1  verify_deployment.ps1
phantom-mesh-vpn/scripts/audits/: generate_audit_report.py  p0-003-dependency-audit.sh
phantom-mesh-vpn/scripts/updates/: p0-004-apply-updates.sh  verify_updates.py
phantom-mesh-vpn/src/: components_integration.py  lib.rs  load_test.rs  main.rs  metrics.rs
phantom-mesh-vpn/src/agent_framework/: apex.rs  cipher.rs  coordinator.rs  fortress.rs  message.rs  mod.rs  traits.rs
phantom-mesh-vpn/src/agent_swarm/: __init__.py  analytics_api_gateway.py  analytics_ingestion.py  analytics_processor.py  discovery.py  metrics.py  multi_region_orchestrator.py  orchestration.py  performance_testing.py  phantom_orchestrator.py  predictive_response.py  self_learning_framework.py  threat_integration.py  threat_ml_detection.py  timeseries_db.py  vpn_hooks.py
phantom-mesh-vpn/src/automation/: __init__.py  alert_routing.py  auto_remediation.py  incident_response.py  integration.py  ml_training.py  threat_assessment.py
phantom-mesh-vpn/src/reporting/: reporting_engine.py
phantom-mesh-vpn/src/security_layer/: crypto_manager.rs  mod.rs  sigma_vault.rs  threat_engine.rs
phantom-mesh-vpn/src/vpn_core/: api_gateway.rs  mod.rs  routing_manager.rs  tunnel_engine.rs
phantom-mesh-vpn/tests/: integration_tests.rs
phantom-mesh-vpn/tests/fixtures/: sample_configs.yaml  threat_signatures.json
phantom-mesh-vpn/tests/load/: analyze_load_test.py  execute_load_test.ps1  execute_load_test.sh  load_test_runner.py  load_test_scripts_configmap.yaml  optimize_tail_latency.py  simulate_load_test.py  test_harness_deployment.yaml
phantom-mesh-vpn/tests/mocks/: mock_network.rs  mod.rs
phantom-mesh-vpn/tests/python/: __init__.py  conftest.py
(+85 files in other folders)
