[package]
name = "phantom-mesh-vpn"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Bilodeau <stephen@phantommesh.io>"]
license = "GPL-3.0"
description = "Trans-dimensional agent-swarm VPN with quantum-resistant routing"
repository = "https://github.com/phantommesh/phantom-mesh-vpn"

[dependencies]
# WireGuard Protocol (boringtun is Unix-only, using manual implementation)
# boringtun = { version = "0.6", features = ["device"] }
x25519-dalek = "2.0.0-rc.3"

# Quantum-Resistant Cryptography (Kyber/CRYSTALS)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Networking
tokio = { version = "1.35", features = ["full"] }

# API Gateway
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto Utilities
ring = "0.17"
rand = "0.8"
blake3 = "1.5"
chacha20poly1305 = "0.10"  # AEAD cipher for ΣVault
bincode = "1.3"  # Serialization for dimensional coordinates

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.4"
sysinfo = "0.30"

# Threat Detection
regex = "1.10"
aho-corasick = "1.1"  # Fast multi-pattern matching
bloom = "0.3"  # Bloom filters for signature lookup
statrs = "0.16"  # Statistical analysis
dashmap = "5.5"  # Concurrent hashmap
crossbeam = "0.8"  # Concurrent utilities

# FFI for Python Integration (future)
# pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[lib]
name = "phantom_mesh"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "phantom-node"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true