[package]
name = "phantommesh-desktop"
version = "1.0.0"
description = "PhantomMesh VPN Desktop Client - Secure, Private, Autonomous"
authors = ["PhantomMesh Team"]
license = "MIT"
repository = "https://github.com/phantommesh/phantommesh-vpn"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-window-state = "2.0"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System Integration
sysinfo = "0.30"
whoami = "1.5"

# HTTP Client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for session tracking
uuid = { version = "1.6", features = ["v4", "serde"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
